fixed some bugs and login is not obligation now

--- a/templates/login.htm
+++ b/templates/login.htm
@@ -2,4 +2,5 @@
 
 {% block body %}
     <a id="google_login" href="/google_login/"></a>
+    <a id="anonimous" href="/anonimous/">Anonimous</a>
 {% endblock %}
