--- a/templates/customize_panel.htm
+++ b/templates/customize_panel.htm
@@ -21,4 +21,6 @@
   <input type="button" value="Фломастер" id="felt_pen" class="draw_element"/>
 
   <input type="button" value="Обновить" id="update"/>
+
+  <button onclick="TowTruck(this); return false;">TowTruck</button>
 </div>
