--- a/templates/wall.htm
+++ b/templates/wall.htm
@@ -21,7 +21,9 @@
       <div></div>
     </div>
 
+
     <script data-main="/static/js/main.js" src="/static/js/require.js"></script>
+    <script src="https://towtruck.mozillalabs.com/towtruck.js" type="text/javascript"></script>
     {% endblock %}
   </body>
 </html>
